# coloria

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  create-readme-plots.py  justfile  pstress.tex  pyproject.toml  setup.cfg  setup.py  srgb-gamut-srgb.vtu  test_requirements.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
articles/how-to-assess-color-space-quality/: Makefile  averages.py  diff-table.py  ellipse-table.py  figure-hue.py  figure-pstress.py  hstress.tex  hue-figure.py  hue-table.py  light_stress.tex  lightness-table.py  lstress.tex  main.bib  main.tex  norms.py  norms.tex  pstress-diff-figure.py  pstress-diff.tex  pstress-figure.py  pstress.tex
articles/how-to-assess-color-space-quality/figures/: averages-000.tsv  averages-001.tsv  averages-002.tsv  averages-003.tsv  averages-004.tsv  averages.tex  figure-averages.py  figure-hue.py  figure-lightness-stress.py  figure-lightness.py  figure-norm-scaling.py  figure-pstress-diff.py  figure-pstress.py  figures-hung-berns.py  figures-macadam1974.py  figures-munsell-lightness.py  hstress.tex  hung-berns-cielab.tex  hung-berns-oklab.tex  hung-berns-xyy.tex  light_stress.tex  macadam1974-cam16.tex  macadam1974-cielab.tex  macadam1974-xyy.tex  munsell-lightness-cielab.tex  norm-scaling.tex  (+4 more)
articles/note-on-cam16/: .gitignore  ARTICLE.md  Makefile  README.md  bib.bib  main.tex  perf.py  perf.tex
articles/remarks-on-osa-ucs/: ARTICLE.md  Makefile  README.md  create-figure-f.py  create-figure-psi.py  create-figures-speed.py  f.tex  main.bib  main.md  main.tex  phi.tex  singularity.tex  speed-absolute.tex  speed-relative.tex  speed.py
colorio/: __about__.py  __init__.py  _cam16.py  _ciecam02.py  _ciede2000.py  _ciehcl.py  _cielab.py  _cielch.py  _cieluv.py  _color_space.py  _exceptions.py  _hdr.py  _helpers.py  _hsl.py  _hsv.py  _ictcp.py  _ipt.py  _jzazbz.py  _linalg.py  _nonlinear.py  _oklab.py  _osa.py  _rgb_gamut.py  _rlab.py  _srgb.py  _surface_gamut.py  _tools.py  _visible_gamut.py  _xyy.py  _xyz.py  cam02.py  cam16.py  ciecam02.py  ciehcl.py  cielab.py  cielch.py  cieluv.py  color_space.py  conversions.py  hdr.py  (+15 more)
colorio/cs/: __init__.py  _cam16.py  _ciecam02.py  _ciehcl.py  _cielab.py  _cielch.py  _cieluv.py  _color_space.py  _din99.py  _hdr.py  _helpers.py  _hsl.py  _ictcp.py  _ipt.py  _jzazbz.py  _oklab.py  _osa.py  _osa_ucs.py  _prolab.py  _rlab.py  _srgb.py  _xyy.py  _xyy1.py  _xyz.py  _xyz1.py
colorio/data/: README.md  __init__.py  ebner_fairchild.yaml  fairchild_johnson.yaml  gamut_triangulation.yaml  helpers.py
colorio/diff/: __init__.py  _cie76.py  _cie94.py  _ciede2000.py  _cmc.py
data/: README.md  ebner_fairchild.yaml  osa-radial-560.yaml
data/corresponding-colour/: README.md
data/hung-berns/: README.md  table1.yaml  table4.yaml
data/luo-rigg/: README.md  luo-rigg.yaml
data/lutchi/: README.md  bit_p1.col  bit_p2.vis  bit_p3.col  bit_p3.vis  bit_p4.col  bit_p4.vis  col.35.p1  col.35.p2  col.35.p3  col.p4  col.p5t  col.p7t  col.rf.p2  col.rf.p4  col.rf.p5  col.rf.p6  colah  colal.l  cold65.l  colwf  colwf.l  kuo.a.vis  kuo.d65.col  kuo.tl84.col  kuo.tl84.vis  la.gg  la.gw  lmean.bb  lmean.gw  lwf.gg  mean.35.p2  mean.35.p3  mean.35.p5  mean.35.p6  mean.p1  mean.p4  mean.p7t  mean4.p10  mean4.p11  (+8 more)
data/macadam1942/: table2.yaml
data/macadam1974/: README.md  table3.yaml
data/macadams/: README.md
data/munsell/: README.md
data/rit-dupont/: README.md  berns.yaml
data/witt/: README.md  table_a1.yaml
experiments/: analytical-observers.py  curve-fit-observers.py  curve_fit.py  new-cs.py  optimize-cielab.py  pade2d.py  show_transformation.py
src/colorio/: __init__.py  _helpers.py  _rgb_gamut.py  _surface_gamut.py  _tools.py  _visible_gamut.py  illuminants.py  observers.py
test/: cam16_legacy.py  test_cam02.py  test_cam16.py  test_cam16_legacy.py  test_ciecam02.py  test_ciede2000.py  test_ciehcl.py  test_cielab.py  test_cielch.py  test_cieluv.py  test_color_space.py  test_comparisons.py  test_conversions.py  test_data.py  test_hdr.py  test_hsl.py  test_hsv.py  test_ictcp.py  test_illuminants.py  test_ipt.py  test_jzazbz.py  test_observers.py  test_oklab.py  test_optimize.py  test_osa.py  test_rec2020.py  test_rlab.py  test_srgb.py  test_srgb1.py  test_srgb_linear.py  test_tools.py  test_xyy.py  test_xyz.py
test/cs/: cam16_legacy.py  test_cam16.py  test_cam16_legacy.py  test_ciecam02.py  test_ciehcl.py  test_cielab.py  test_cielch.py  test_color_space.py  test_comparisons.py  test_consistency.py  test_din99.py  test_hdr.py  test_hsl.py  test_hsv.py  test_ictcp.py  test_jzazbz.py  test_oklab.py  test_osa.py  test_osa_ucs.py  test_prolab.py  test_rlab.py  test_srgb.py
test/data/: test_bfd_p.py  test_combvd.py  test_ebner_fairchild.py  test_fairchild_chen.py  test_hung_berns.py  test_invariance.py  test_leeds.py  test_luo_rigg.py  test_macadam.py  test_macadam_1942.py  test_macadam_1974.py  test_munsell.py  test_rit_dupont.py  test_witt.py  test_xiao.py
test/diff/: test_cie76.py  test_cie94.py  test_ciede2000.py  test_cmc.py
tests/: test_illuminants.py  test_observers.py  test_optimize.py  test_rgb_gamut.py  test_slice.py  test_tools.py
tests/cat/: test_bfd.py  test_bianco_schettini.py  test_bradford.py  test_cat02.py  test_cat16.py  test_cat_consistency.py  test_cmccat2000.py  test_cmccat97.py  test_consistency.py  test_sharp.py  test_von_kries.py
tests/cs/: cam16_legacy.py  test_cam16.py  test_cam16_legacy.py  test_ciecam02.py  test_cielab.py  test_cieluv.py  test_comparisons.py  test_consistency.py  test_conversion.py  test_coordinates.py  test_din99.py  test_hsl.py  test_hsv.py  test_ictcp.py  test_osa_ucs.py  test_srgb.py  test_srlab2.py
tests/data/: test_bfd_p.py  test_combvd.py  test_ebner_fairchild.py  test_fairchild_chen.py  test_hung_berns.py  test_invariance.py  test_leeds.py  test_luo_rigg.py  test_macadam_1942.py  test_macadam_1974.py  test_munsell.py  test_rit_dupont.py  test_witt.py  test_xiao.py
tests/diff/: test_cie94.py  test_ciede2000.py
(+240 files in other folders)
