[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"

[project]
name = "colorio"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "Tools for color models"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Matplotlib",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "numpy >= 1.20",
  "npx",
]

[project.urls]
Code = "https://github.com/nschloe/colorio"
Issues = "https://github.com/nschloe/colorio/issues"
Funding = "https://github.com/sponsors/nschloe"

[project.optional-dependencies]
all = [
  "meshio >= 4, < 6",
  "meshzoo >= 0.9.0, <0.10.0",
  "optimesh >=0.8.0, <0.9.0",
  "pygmsh >= 7, < 8",
  "pyvista",
  "scipy",
  "scipyx",
]
