[metadata]
name = colorio
version = 0.6.0
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Tools for color models
url = https://github.com/nschloe/colorio
project_urls =
    Code=https://github.com/nschloe/optimesh
    Issues=https://github.com/nschloe/optimesh/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
    matplotlib
    numpy
    pyyaml
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
all =
   meshio >= 4, < 5
   meshzoo
   optimesh
   pygmsh
   scipy

[options.package_data]
colorio =
    data/ebner_fairchild.yaml
    data/hung-berns/*.yaml
    data/munsell/real.yaml
    data/macadam1942/*.yaml
    data/observers/*.yaml
    data/illuminants/*.yaml
    data/luo-rigg/*.yaml
    data/xiao/*.yaml
