[metadata]
name = colorio
version = 0.8.4
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Tools for color models
url = https://github.com/nschloe/colorio
project_urls =
    Code=https://github.com/nschloe/colorio
    Issues=https://github.com/nschloe/colorio/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Framework :: Matplotlib
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    =src
packages = find:
install_requires =
    matplotlib
    numpy >= 1.20
    npx
python_requires = >=3.7

[options.packages.find]
where=src

[options.extras_require]
all =
   meshio >= 4, < 6
   meshzoo >= 0.8.0
   optimesh >=0.8.0, <0.9.0
   pygmsh >= 7, < 8
   pyvista
   scipy
   scipyx

[options.package_data]
colorio =
    data/bfd_p/*.json
    data/ebner_fairchild/*.json
    data/fairchild_chen/*.json
    data/hung_berns/*.json
    data/illuminants/*.json
    data/leeds/*.json
    data/luo_rigg/*.json
    data/macadam_1942/*.json
    data/macadam_1974/*.json
    data/munsell/*.json
    data/observers/*.json
    data/rit_dupont/*.json
    data/witt/*.json
    data/xiao/*.json
